<resources>
    <string name="app_name">Club Deportivo</string>
    <string name="acceder">Acceder</string>
    <string name="password">Password</string>
    <string name="usuario">Usuario</string>
    <string name="ingreso_al_sistema">Ingreso al sistema</string>
    <string name="logo_de_club">Logo de Club</string>
    <string name="usuarioHint">Usuario</string>
    <string name="menuprincipal">MenuPrincipal</string>
    <string name="usuarioLogueado">Usuario:</string>
    <string name="cobrar_actividad">Cobrar Actividad</string>
    <string name="cobrar_cuota">Cobrar Cuota</string>
    <string name="inscribir_usurios">Inscribir Usuarios</string>
    <string name="listado_de_cuotas">Listado de Cuotas</string>
    <string name="inscripcion">Inscripción</string>
    <string name="carnet">Club Deportivo\nCarnet</string>
    <string name="socio">Socio</string>
    <string name="tipo_de_usuario">Tipo de\nUsuario</string>
    <string name="socio_no_socio">Socio / No Socio</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="direccion">Dirección</string>
    <string name="email">Email</string>
    <string name="fecha_de_inscripcion">Fecha de \nInscripción</string>
    <string name="imprimir_carnet">Imprimir Carnet</string>
    <string name="registrar_cobro">Registrar Cobro</string>
    <string name="nueva_inscripci_n">Nueva Inscripción</string>
    <string name="ver_comprobante">Ver Comprobante</string>
    <string name="fecha_de_pago">Fecha de Pago</string>
    <string name="fecha_de_finalizaci_n_de_la_cuota">Fecha de finalización de la cuota</string>
    <string name="fecha_de_inicio_de_cuota">Fecha de inicio de cuota</string>
    <string name="efectivo">Efectivo</string>
    <string name="tipo_de_usuario">Tipo de Usuario:</string>
    <string name="m_todo_de_pago">Método de pago:</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="no_socio">No Socio</string>
    <string name="monto_a_pagar">Monto a pagar</string>
    <string name="seleccione_socio_no_socio">Seleccione Socio/No Socio:</string>
    <string name="cobro_de_cuotas">Cobro de Cuotas</string>
    <string name="nombre">Nombre</string>
    <string name="dni">DNI</string>
    <string name="fecha_de_inscripci_n">Fecha de inscripción</string>
    <string name="email">Email</string>
    <string name="apto_f_sico">Apto Físico</string>
    <string name="inscribir">Inscribir</string>
    <string name="datos_del_usuario">Datos del Usuario:</string>
    <string name="usuario_no_socio">Usuario No Socio</string>
    <string name="ver_carnet">Ver Carnet</string>
    <string name="busque_al_socio_por_dni">Busque al socio por DNI</string>
    <string name="cuota">Cuota</string>
    <string name="nuevo_cobro">Nuevo Cobro</string>
    <string name="nroSocio">Nª</string>
    <string name="vencimiento_de_cuota">Vencimiento de cuota</string>
    <string name="listado_de_socios_con_cuotas_vencidas">Listado de Socios con cuotas vencidas</string>
    <string name="cobro_de_actividades">Cobro de actividades</string>
    <string name="busque_al_no_socio_por_dni">Busque al No Socio por DNI</string>
    <string name="actividad">Actividad</string>
    <string name="comprobante_de_pago_de_cuota">Comprobante de Pago de Cuota</string>
    <string name="socio_dni_nombre">Socio (DNI - Nombre)</string>
    <string name="cuota_fecha_de_inicio">Cuota - Fecha de inicio</string>
    <string name="monto_pagado">Monto pagado</string>
    <string name="imprimir_comprobante">Imprimir comprobante</string>
    <string name="cuota_fecha_de_vencimiento">Cuota - Fecha de Vencimiento</string>
</resources>