<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <TextView
        android:id="@+id/txtMenuPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menuprincipal"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="85dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnInscribir"
        app:layout_constraintTop_toBottomOf="@id/txtUsuario"/>

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/usuarioLogueado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="11dp" />

    <Button
        android:id="@+id/btnInscribir"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="130dp"
        android:layout_height="124dp"
        android:text="@string/inscribir_usurios"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="148dp"
        app:layout_constraintBottom_toTopOf="@id/btnCobrarActividad"
        app:layout_constraintTop_toBottomOf="@id/txtMenuPrincipal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCobrarCuota"/>

    <Button
        android:id="@+id/btnCobrarCuota"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="130dp"
        android:layout_height="124dp"
        android:text="@string/cobrar_cuota"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="148dp"
        app:layout_constraintTop_toBottomOf="@id/txtMenuPrincipal"
        app:layout_constraintBottom_toTopOf="@id/btnListado"
        app:layout_constraintStart_toEndOf="@id/btnInscribir"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnCobrarActividad"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="130dp"
        android:layout_height="124dp"
        android:text="@string/cobrar_actividad"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="303dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnInscribir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnListado"/>

    <Button
        android:id="@+id/btnListado"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="130dp"
        android:layout_height="124dp"
        android:text="@string/listado_de_cuotas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCobrarActividad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCobrarCuota"

        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="303dp" />
</androidx.constraintlayout.widget.ConstraintLayout>